--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -16,6 +16,6 @@ jobs:
       - run: echo "$" > "$HOME/.ssh/key_regru"
       - run: chmod 600 "$HOME/.ssh/key_regru"
       # Deploy
-      - run: rsync -e "ssh -p 20022 -i $HOME/.ssh/key_regru -o StrictHostKeyChecking=no" --archive --compress --delete . ns1.hosting.reg.ru:/var/www/u1727349/data/www/mindeliveryprice.ru                                                                                                                          
+      - run: rsync -e "ssh -p 20022 -i $HOME/.ssh/key_regru -o StrictHostKeyChecking=no" --archive --compress --delete . u1727349@ns1.hosting.reg.ru:/var/www/u1727349/data/www/mindeliveryprice.ru                                                                                                                          
       #- run: rsync -e "ssh -p 20022 -i $HOME/.ssh/key_regru -o StrictHostKeyChecking=no" --archive --compress --delete . m71516@hostru04.fornex.org:/home/m71516/public_html/blog.maxgraph.ru
       
