--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -13,7 +13,7 @@ jobs:
       # Setup key
       - run: set -eu
       - run: mkdir "$HOME/.ssh"
-      - run: echo "$" > "$HOME/.ssh/key_regru"
+      - run: echo "${{ secrets.key }}" > "$HOME/.ssh/key_regru"
       - run: chmod 600 "$HOME/.ssh/key_regru"
       # Deploy
       - run: rsync -e "ssh -p 20022 -i $HOME/.ssh/key_regru -o StrictHostKeyChecking=no" --archive --compress --delete . u1727349@server235.hosting.reg.ru:/var/www/u1727349/data/www/mindeliveryprice.ru                                                                                                                          
