--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -13,9 +13,8 @@ jobs:
       # Setup key
       - run: set -eu
       - run: mkdir "$HOME/.ssh"
-      - run: echo "${{ secrets.key }}" > "$HOME/.ssh/key_regru"
-      - run: chmod 600 "$HOME/.ssh/key_regru"
+      - run: echo "${{ secrets.key }}" > "$HOME/.ssh/key"
+      - run: chmod 600 "$HOME/.ssh/key"
       # Deploy
-      - run: rsync -e "ssh -p 20022 -i $HOME/.ssh/authorized_keys -o StrictHostKeyChecking=no" --archive --compress --delete . u1727349@server235.hosting.reg.ru:/var/www/u1727349/data/www/mindeliveryprice.ru                                                                                                                          
-      #- run: rsync -e "ssh -p 20022 -i $HOME/.ssh/key_regru -o StrictHostKeyChecking=no" --archive --compress --delete . m71516@hostru04.fornex.org:/home/m71516/public_html/blog.maxgraph.ru
+      - run: rsync -e "ssh -p 20022 -i $HOME/.ssh/key -o StrictHostKeyChecking=no" --archive --compress --delete . u1727349@server235.hosting.reg.ru:/var/www/u1727349/data/www/mindeliveryprice.ru     
       
