--- a/requirements.txt
+++ b/requirements.txt
@@ -27,10 +27,10 @@ fake-useragent==0.1.11
 fastapi==0.78.0
 filelock==3.6.0
 folium==0.12.1.post1
-future==0.18.2=
+future==0.18.2
 h11==0.13.0
 h2==4.1.0
-hpack==4.0.0=
+hpack==4.0.0
 html5lib==1.1
 httplib2==0.20.4
 httplib2shim==0.0.3
@@ -70,7 +70,7 @@ pylint==2.12.2
 pyparsing==3.0.7
 python-dotenv==0.19.2
 pywin32-ctypes==0.2.0
-PyYAML==6.0=
+PyYAML==6.0
 requests==2.28.0
 requests-toolbelt==0.9.1
 rsa==4.8
