--- a/requirements.txt
+++ b/requirements.txt
@@ -38,7 +38,7 @@ httptools==0.4.0
 hyper==0.7.0
 hypercorn==0.13.2
 hyperframe==6.0.1
-idna==2.5
+idna>=2.5
 importlib-metadata==4.11.3
 isort==5.10.1
 Jinja2==3.1.2
