--- a/requirements.txt
+++ b/requirements.txt
@@ -35,7 +35,7 @@ html5lib==1.1
 httplib2==0.20.4
 httplib2shim==0.0.3
 httptools==0.4.0
-hyper==0.7.0
+#hyper==0.7.0
 hypercorn==0.13.2
 hyperframe==6.0.1
 idna>=2.5
