--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -16,5 +16,5 @@ jobs:
       - run: echo "${{ secrets.key }}" > "$HOME/.ssh/key"
       - run: chmod 600 "$HOME/.ssh/key"
       # Deploy
-      - run: rsync -e "ssh -p 22 -i $HOME/.ssh/key -o StrictHostKeyChecking=no root@194.67.119.198 'chown -R root:root /root/testapp/'" --archive --compress --delete .  root@194.67.119.198:/root/testapp/
+      - run: rsync -e "ssh -p 22 -i $HOME/.ssh/key -o StrictHostKeyChecking=no root@194.67.119.198 chown -R root:root /root/testapp/" --archive --compress --delete .  root@194.67.119.198:/root/testapp/
       
